# cProgrammingBasic

./: GeneralProgrammingFundamentals.md  README.md
001_VeryBasic/: CMakeLists.txt
001_VeryBasic/Sources/: main.c  veryBasic2.c  veryBasic3.c
002_CommentAndFormatSpecification/: CMakeLists.txt
002_CommentAndFormatSpecification/Sources/: 001_CommentAndFormatSpecification.c  002_CommentAndFormatSpecification.c  003_CommentAndFormatSpecification.c  004_CommentAndFormatSpecification.c
003_Basic_of_C_Programming/: CMakeLists.txt
003_Basic_of_C_Programming/Sources/: 001_Print_Rectangle_of_Astericks.c  002_Print_Asterisks_Pattern.c  003_Print_X_Shape.c  004_Print_Birth_Year.c
